# homemaker

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  changelog.md
.github/workflows/: rust.yml
benches/: benchy_bench.rs  config.toml
demo/: hm.webm
src/: config.rs  config.toml  hm.rs  hmerror.rs  lib.rs  main.rs  mgmt.rs  util.rs
src/lib/: app.rs  config.rs  hm_macro.rs  hmerror.rs  mod.rs  task.rs
symlinktest/: Cargo.toml  symlinktest.rs
