[package]
name = "hm"
version = "0.3.2"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"
description = "homemaker. Slightly more than yet another dotfile manager."
license = "Apache-2.0"
repository = "https://github.com/hlmtre/homemaker"
keywords = ["dotfiles", "management", "dotfile"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "2.0"
shellexpand = "2.0.0"
symlink = "0.1.0"
solvent = "0.8.2"
indicatif = "0.15.0"
console = "0.12.0"
