[package]
name = "hm"
version = "0.4.2"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"
description = "homemaker. Slightly more than yet another dotfile manager."
license = "Apache-2.0"
repository = "https://github.com/hlmtre/homemaker"
keywords = ["dotfiles", "management", "dotfile"]
categories = ["command-line-utilities", "filesystem"]
include = ["src/**/*", "LICENSE", "README.md"]

[lib]
name = "hm"
path = "src/lib/mod.rs"

[[bin]]
name = "hm"
path = "src/hm.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchy_bench"
path = "benches/benchy_bench.rs"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "3.0"
shellexpand = "2.0.0"
symlink = "0.1.0"
solvent = "0.8.2"
indicatif = "0.15.0"
console = "0.14.0"
sys-info = "0.7.0"
strum = "0.20"
strum_macros = "0.20"
