[package]
name = "hm"
version = "0.7.5"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"
description = "homemaker. Slightly more than yet another dotfile manager."
license = "Apache-2.0"
repository = "https://github.com/hlmtre/homemaker"
keywords = ["dotfiles", "management", "dotfile"]
categories = ["command-line-utilities", "filesystem"]
include = ["src/**/*", "LICENSE", "README.md", "changelog.md"]

[lib]
name = "hm"
path = "src/lib/mod.rs"

[[bin]]
name = "hm"
path = "src/hm.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchy_bench"
path = "benches/benchy_bench.rs"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs-next = "2.0"
shellexpand = "3.0.0"
symlink = "0.1.0"
solvent = "0.8.3"
indicatif = "0.17.3"
console = "0.15.4"
sys-info = "0.9.1"
strum = "0.24.1"
strum_macros = "0.24.3"
log = "0.4.17"
simplelog = "0.12"
chrono = "0.4"
