[package]
name = "symlinktest"
version = "0.1.0"
authors = ["Matt Weller <hellmitre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "2.0.0"

[[bin]]
name = "symlinktest"
path = "symlinktest.rs"
